# compilers101

./: .gitignore  LICENSE.md  Makefile  README.md  scan.c  scandec.c
20160809/: parser.c  parser.h
Compiler-base1_Nota_9/: cp.c  error.c  error.h  lexer.c  lexer.h  parser.c  parser.h  semantic.c  semantic.h  tabsym.c  tabsym.h
Compiler-base2/: .parser.c.kate-swp  Makefile  MyPas.kdev4  keywords.c  keywords.h  lexer.c  lexer.h  main.c  parser.c  parser.h  tokens.h
Compiler-base3/: Makefile  keywords.c  keywords.h  lexer.c  lexer.h  main.c  main.h  mypas  parser.c  parser.h  parserlimpo.c  symtab.c  teste.pas  testemypas.pas  tokens.h  typecheck.h
Compiler-base4_Eraldo/: Makefile  MyPas_typecheck.kdev4  a.out  exemplo-procedures.pas  factorial.s  floatingsamples.c  floatingsamples.s  keywords.c  keywords.h  lexer.c~  lexer.h  macros.h  main.c  memory-model.txt  memsample.c  memsample.s  parser-clean.c  parser-codegen.c  parser-typecheck.c  parser.c  parser.h  parser_1.c  pseudocode.c  pseudocode.h  symtab.c  symtab.h  test_mypas.pas  tokens.h  typecheck.c
Compiler-base5_Nota_8/: global.h  lexer.c  lexer.h  main.c  main.h  parser.c  parser.h  rotulo.c  rotulo.h  simbolo.c  simbolo.h  tipo.c  tipo.h
Compiler-base6_Nota_95/: Makefile  codificador.c  codificador.h  codigo.s  core  lexan.c  lexan.h  parser.c  parser.h  (+8 more)
mypas/: .gitignore  CMakeLists.txt  Makefile  flthack.c  flthack.s  keywords.c  keywords.h  lexer.c  lexer.h  macros.h  mypas  mypas.c  mypas.h  parser.c  parser.h  pseudoassembly.c  pseudoassembly.h  source.pas  symtab.c  symtab.h  teste.txt  tokens.h
(+42 files in other folders)
